# haskell-dynamic-loading

./: .gitignore  README.md  build.sh  gmae.cabal  run.sh  stack.yaml
src/: API.hs  Game.hs  Main.hs  Plugin.hs  TestPlugin.hs
