name:                gmae
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/gmae#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable gmae
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , sdl2
                     , random
  cpp-options: -D_SDL_main_h
